# jni-ness

./: README.md
src/: CMakeLists.txt  build.sh  stateful.cpp  stateful.java
